--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
     />
 
-    <title>Yuuki Hori</title>
+    <title>Yuki Hori</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
