--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,16 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
       rel="stylesheet"
+    /> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Exo+2:wght@400;500&family=Karla:wght@300&family=Raleway:ital,wght@1,300&family=Titillium+Web&display=swap"
+      rel="stylesheet"
     />
-
     <title>Yuki Hori</title>
   </head>
   <body>
