modify hero, works, skills

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,10 @@
       href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Exo+2:wght@400;500&family=Karla:wght@300&family=Raleway:ital,wght@1,300&family=Titillium+Web&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Dancing+Script:wght@500&family=Exo+2:wght@400;500&family=Karla:wght@300&family=Raleway:ital,wght@1,300&family=Titillium+Web&display=swap"
+      rel="stylesheet"
+    />
     <title>Yuki Hori</title>
   </head>
   <body>
