--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       content="Yuki Hori | Frontend developer | Reactjs | Javascript"
     />
 
+    <link rel="icon" type="image/x-icon" href="./favicon.svg" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
